--- a/src/main/resources/templates/UserDashBoard.html
+++ b/src/main/resources/templates/UserDashBoard.html
@@ -9,12 +9,12 @@
          <h1>STM:Silicone Test Method</h1>
     <div class="dashboard">
         <a href="#" class="dashboard-button disabled-link" th:href="@{/register}" style="margin-top:30px;"><span>&#9733;</span>New Registration</a>
-        <a href="#" class="dashboard-button " th:href="@{/search}" style="margin-top:30px;"><span>&#9733;</span>Search</a>
+        <a href="#" class="dashboard-button " th:href="@{/search(ssoid = ${ssoid})}" style="margin-top:30px;"><span>&#9733;</span>Search</a>
     </div>
         <div class="dash">                 
-        <a href="#" class="dashboard-button disabled-link" th:href="@{/modify}" style="margin-top:30px;">Modify</a>
-        <a href="#" class="dashboard-button disabled-link" th:href="@{/revise}" style="margin-top:30px;">Revise</a>
-        <a href="#" class="dashboard-button disabled-link" th:href="@{/delete}" style="margin-top:30px;">Delete</a>
+        <a href="#" class="dashboard-button disabled-link" th:href="@{/modify(ssoid = ${ssoid})}" style="margin-top:30px;">Modify</a>
+        <a href="#" class="dashboard-button disabled-link" th:href="@{/revise(ssoid = ${ssoid})}" style="margin-top:30px;">Revise</a>
+        <a href="#" class="dashboard-button disabled-link" th:href="@{/delete(ssoid = ${ssoid})}" style="margin-top:30px;">Delete</a>
         </div>
         <h2 style="margin-right:850px; font-size:20px;">Explanation link file 1: Format.doc</h2>
         <h2 style="margin-right:850px; font-size:20px;">Explanation link file 2: Guidelines</h2>
